objects/LAT_BR_ContractForecast__c.object
<CustomObject>
    <fields>
        <fullName>LAT_BR_FiscalYear__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2220</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_Forecast__c</fullName>
        <label>Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>REG CO</fullName>
                </value>
                <value>
                    <fullName>REG MATRIZ</fullName>
                </value>
                <value>
                    <fullName>REG MT</fullName>
                </value>
                <value>
                    <fullName>REG NE</fullName>
                </value>
                <value>
                    <fullName>REG SP</fullName>
                </value>
                <value>
                    <fullName>REG SUD</fullName>
                </value>
                <value>
                    <fullName>REG SUL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_Segmentation__c</fullName>
        <label>Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Leading</fullName>
                </value>
                <value>
                    <fullName>Mainstream</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Iconic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_YearSegmentationRegion__c</fullName>
        <label>Year-Segmentation-Region</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Contract Forecast</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Contract Forecast</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts Forecast</pluralLabel>
    <recordTypes>
        <fullName>LAT_BR_CFT_Standard</fullName>
        <active>true</active>
        <description>Brasil Standard Record Type</description>
        <label>BR Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>